# RustyController

./: .releaserc  README.md
.github/workflows/: app_dart-build.yml  app_flutter-build.yml  build.yml  release.yml  rust-build.yml  rust.yml  server_rust-build.yml  server_rust-release.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: global_consts.dart  main.dart
app/lib/bloc/: breathing_bloc.dart  discovery_bloc.dart  effect_bloc.dart  specific_effect_bloc.dart
app/lib/extensions/: color_extensions.dart  network_extensions.dart
app/lib/model/: graphql_queries.dart  led_effects.dart  led_effects.g.dart
app/lib/screen/: effect_screen.dart  home_screen.dart
app/lib/service/: controller_service.dart  discovery_service.dart  store_service.dart  worker_service.dart
app/lib/widgets/: effect_chooser.dart  effect_widget.dart  (+1 more)
app/test/: main.dart
app/windows/: CMakeLists.txt
server/: .gitignore  Cargo.toml  Cross.toml  README.md
server/.run/: Run rusty_controller.run.xml
server/docker/: .gitignore  arm-grafana-loki.yaml  grafana-loki.yaml  grafana.base.yaml  grafana.yaml  install-auto-restart.sh
server/docker/config/: prometheus.yaml  promtail.yaml
server/docker/cross-compile/: Dockerfile
server/docker/grafana-dashboards/: README.md  host-metrics.json  logs.json  metrics.json  runner-logs.json
server/scripts/: auto-update.sh  launch-all.sh  run-exporters.sh  run-node-exporter.sh  run-server.sh  run-tmux-session.sh
server/src/: logger.rs  main.rs  move_task.rs  ps_move_api.rs  spawn_tasks.rs  tracing_setup.rs
server/src/graphql/: graphql_api.rs  mod.rs  schema.rs  schema_input.rs  schema_mutation.rs  schema_query.rs  schema_response.rs  schema_subscription.rs
server/src/monitoring/: metrics.rs
server/src/ps_move/: api.rs  controller.rs  effects.rs  led_effects.rs  mod.rs  models.rs  rumble_effects.rs
server/src/services/: mod.rs  ps_move_api.rs
server/src/tasks/: controller_update.rs  controllers_list_update.rs  effect_update.rs  effects_update.rs  ip_discovery.rs  list_controllers.rs  list_controllers_task.rs  mod.rs  models.rs  mutations_handler.rs  set_mutations.rs  set_mutations_task.rs  spawn_tasks.rs  update_controller_effects.rs  update_controllers.rs  update_controllers_list.rs  update_controllers_task.rs  update_effects.rs
(+28 files in other folders)
