[package]
name = "rusty_controller"
version = "0.1.0"
edition = "2021"

[dependencies]

# Rust++
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4.0"
futures = "0.3"
async-stream = "0.3.3"

# Log
log = "0.4"
log4rs = "1.1.1"
log-panics = { version = "2", features = ["with-backtrace"] }

# HID magic
hidapi = "2"

# Colors
palette = "0.6"

# Async
tokio = { version = "1.23", features = ["net", "sync", "macros", "rt-multi-thread", "rt"] }

# GraphQL
warp = "0.3"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
juniper = "0.15"
juniper_warp = { version = "0.7", features = ["subscriptions"] }
juniper_graphql_ws = "0.3"
