[package]
name = "rusty_controller"
version = "0.1.0"
edition = "2021"

[dependencies]

# Rust++
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4.0"
futures = "0.3"
async-stream = "0.3.3"
rand = "0.8"

# HID magic
hidapi = "2"

# Colors
palette = "0.7"

# Async
tokio = { version = "1.32.0", features = ["net", "sync", "macros", "rt-multi-thread", "rt"] }

# Logging & Tracing
tracing = "0.1"

tracing-appender = "0.2"
tracing-subscriber = "0.3.17"

tracing-loki = { version = "0.2.4", default-features = false, features = ["rustls", "compat-0-2-1"] }

tokio-metrics = "0.3.0"
console-subscriber = "0.1.10"

# Monitoring
prometheus = { version = "0.13.3", features = ["process"] }

# GraphQL
warp = "0.3.5"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
juniper = "0.15.11"
juniper_warp = { version = "0.7.0", features = ["subscriptions"] }
juniper_graphql_ws = "0.3.0"
